	Removed these properties
	(do_construct_handler): Use the client's property bag.

	* gnome-selector-client.c
	(PROP_WANT_ENTRY_WIDGET, PROP_WANT_SELECTOR_WIDGET, PROP_WANT_BROWSE_BUTTON,
	PROP_WANT_CLEAR_BUTTON, PROP_WANT_DEFAULT_BUTTON, PROP_BROWSE_DIALOG_MONIKER):
	New properties.
	(gnome_selector_client_construct): Create a new property bag and proxy our
	GObject's properties.

2001-05-20  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.h
	(gnome_selector_client_new): Take a `const gchar *moniker'.
	(gnome_selector_client_construct): Likewise.
	(gnome_selector_client_new_from_objref): New function.
	(gnome_selector_client_construct_from_objref): Likewise.

2001-05-19  Martin Baulig  <baulig@suse.de>

	* gnome-image-entry-component.[ch]: Moved to ../components.
	* gnome-icon-selector-component.[ch]: Likewise.

	* gnome-image-entry.c, gnome-image-selector.c: Use bonobo_get_object()
	to activate the component.

2001-05-10  Martin Baulig  <baulig@suse.de>

	* gnome-file-entry.h (GnomeFileEntry): Derive from GnomeSelectorClient.
	* gnome-file-entry.c (gnome_file_entry_new): Use GnomeSelectorComponent.

	* gnome-image-entry-component.h (GnomeImageEntryComponent): Derive from
	GnomeSelectorComponent.

2001-05-09  Martin Baulig  <baulig@suse.de>

	* gnome-selector-component.[ch]: New files.

	* gnome-icon-selector-component.h (GnomeIconSelectorComponent): Derive
	from GnomeSelectorComponent.

	* gnome-image-selector.[ch]: New files; this is a GnomeSelectorClient
	wrapper for the GnomeIconSelectorComponent.

2001-05-09  Martin Baulig  <baulig@suse.de>

	* gnome-icon-selector-component.[ch]: Use the new GnomeSelector API.

	* gnome-icon-selector.[ch]: Renamed to gnome-icon-selector-component.[ch].

2001-05-09  Martin Baulig  <baulig@suse.de>

	* gnome-icon-entry.[ch]: Renamed to gnome-image-entry-component.[ch].

	* gnome-image-entry-component.c: This is now a GnomeSelector component.

	* gnome-image-entry.[ch]: New files; this is a GnomeSelectorClient